# lateralbuckling

./: CMakeLists.txt  README.md  log.txt
cmake/: FindLibshell.cmake
plots/: W-0.1.nb  W-0.5.nb  W-0.9.nb
src/: BAC.h  DCS.h  DStheta.h  Model.h  QBCR.h  QBPL.h  main.cpp
